[tool.poetry]
name = "assignment"
version = "0.1.0"
description = ""
authors = ["mttesla <fincher0307@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
fastapi-cli = "^0.0.5"
pydantic = "^2.9.2"
sqlalchemy = "^2.0.35"
pyjwt = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
